# rust.zsh-prompts

./: Cargo.toml
src/: lib.rs  main.rs  modules.rs
src/modules/: cmd.rs  git.rs  mod.rs  os.rs  pwd.rs  time.rs
