[features]
zsh-module = ["dep:zsh-sys"]

[lib]
crate-type = ["rlib"]

[package]
name = "zsh-prompts"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4.42"
dirs = "6.0.0"
regex = "1.12.2"
os_info = "3.14.0"
git2 = "0.20.3"
lazy_static = "1.5.0"
serde = "1.0.228"
rkyv = { version = "0.8.12", features = ["std"] }
zsh-sys = { version = "0.1.1", optional = true }
